syntax = "proto3";

package com.ixaris.commons.async.lib;

import "valid.proto";
import "description.proto";

option optimize_for = SPEED;

message AsyncLocalValue {
    int64 long_value = 2;
    string string_value = 3;
    bytes bytes_value = 4;
}

message AsyncLocals {
    map<string, AsyncLocalValue> async_local = 1;
}

message Correlation {
    int64 correlation_id = 1;
    int64 intent_id = 2;
}

message LogContextValue {
    map<string, string> context = 1;
}

message IntentValue {
    int64 id = 1;
    string path = 2;
    int64 hash = 3;
}
